--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -1297,7 +1297,7 @@ img {
       width: 350px;
     }
     .about__description {
-      text-align: initial;
+      text-align: center;
     }
     .about__info {
       justify-content: space-between;
